tests/baselines/reference/equalityWithUnionTypes01.errors.txt
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(13,5): error TS2365: Operator '===' cannot be applied to types 'number | I2' and 'I1'.
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(13,16): error TS2365: Operator '===' cannot be applied to types 'I1' and 'number | I2'.
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(15,10): error TS2365: Operator '!==' cannot be applied to types 'number | I2' and 'I1'.
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(15,21): error TS2365: Operator '!==' cannot be applied to types 'I1' and 'number | I2'.
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(17,10): error TS2365: Operator '==' cannot be applied to types 'number | I2' and 'I1'.
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(17,20): error TS2365: Operator '==' cannot be applied to types 'I1' and 'number | I2'.
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(19,10): error TS2365: Operator '!=' cannot be applied to types 'number | I2' and 'I1'.
tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts(19,20): error TS2365: Operator '!=' cannot be applied to types 'I1' and 'number | I2'.


==== tests/cases/conformance/types/typeRelationships/matchable/equalityWithUnionTypes01.ts (8 errors) ====
    interface I1 {
        p1: number
    }
    
    interface I2 extends I1 {
        p2: number;
    }
    
    var x = { p1: 10, p2: 20 };
    var y: number | I2 = x;
    var z: I1 = x;
    
    if (y === z || z === y) {
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'number | I2' and 'I1'.
                   ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'I1' and 'number | I2'.
    }
    else if (y !== z || z !== y) {
             ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'number | I2' and 'I1'.
                        ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'I1' and 'number | I2'.
    }
    else if (y == z || z == y) {
             ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'number | I2' and 'I1'.
                       ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'I1' and 'number | I2'.
    }
    else if (y != z || z != y) {
             ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'number | I2' and 'I1'.
                       ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'I1' and 'number | I2'.
    }